--- a/app/src/main/res/layout/activity_makeweak.xml
+++ b/app/src/main/res/layout/activity_makeweak.xml
@@ -15,8 +15,15 @@
 
     <Button
         android:id="@+id/btn"
-        android:text="single"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="single" />
+
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn"
+        android:text="viewmodel" />
 
 </RelativeLayout>
