知识点添加

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,19 @@
             android:id="@+id/btn_handler_test"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Handler Test"/>
+            android:text="Handler Test" />
 
         <Button
             android:id="@+id/btn_start_leak"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="start_makeleak"/>
+            android:text="start_makeleak" />
+
+        <Button
+            android:id="@+id/btn_flow_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="start_flowlayout" />
 
     </LinearLayout>
 
