事件分发流程

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,12 @@
             android:layout_height="wrap_content"
             android:text="start_flowlayout" />
 
+        <Button
+            android:id="@+id/btn_view_touch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="viewtouch" />
+
     </LinearLayout>
 
 </ScrollView>
