--- a/app/src/main/res/layout/activity_viewtouch.xml
+++ b/app/src/main/res/layout/activity_viewtouch.xml
@@ -17,24 +17,24 @@
         android:layout_height="wrap_content"
         android:text="dfd" />
 
-    <com.tzh.studydemo.viewtouch.MyRelativeLayout
+    <com.tzh.android.viewtouch.MyRelativeLayout
         android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.tzh.studydemo.viewtouch.MyMiddleRelativeLayout2
+        <com.tzh.android.viewtouch.MyMiddleRelativeLayout2
             android:layout_width="600dp"
             android:layout_height="600dp"
             android:background="#ff0">
 
-            <com.tzh.studydemo.viewtouch.MyMiddleRelativeLayout
+            <com.tzh.android.viewtouch.MyMiddleRelativeLayout
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:layout_centerInParent="true"
                 android:background="@color/colorPrimary">
 
-                <com.tzh.studydemo.viewtouch.MyTextView
+                <com.tzh.android.viewtouch.MyTextView
                     android:id="@+id/tv"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -43,12 +43,12 @@
                     android:text="MyTextView" />
 
 
-            </com.tzh.studydemo.viewtouch.MyMiddleRelativeLayout>
+            </com.tzh.android.viewtouch.MyMiddleRelativeLayout>
 
-        </com.tzh.studydemo.viewtouch.MyMiddleRelativeLayout2>
+        </com.tzh.android.viewtouch.MyMiddleRelativeLayout2>
 
 
-    </com.tzh.studydemo.viewtouch.MyRelativeLayout>
+    </com.tzh.android.viewtouch.MyRelativeLayout>
 
 
 </LinearLayout>
