--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,12 @@
             android:layout_height="wrap_content"
             android:text="bitmappool" />
 
+        <Button
+            android:id="@+id/btn_lifecycle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="lifecycleactivity" />
+
     </LinearLayout>
 
 </ScrollView>
