--- a/app/src/main/res/layout/activity_viewtouch.xml
+++ b/app/src/main/res/layout/activity_viewtouch.xml
@@ -4,6 +4,7 @@
     android:id="@+id/ll_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,6 +14,7 @@
         android:text="sdfsf" />
 
     <Button
+        android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="dfd" />
@@ -21,34 +23,35 @@
         android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorAccent"
         android:orientation="vertical">
-
-        <com.tzh.android.viewtouch.MyMiddleRelativeLayout2
-            android:layout_width="600dp"
-            android:layout_height="600dp"
-            android:background="#ff0">
-
-            <com.tzh.android.viewtouch.MyMiddleRelativeLayout
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_centerInParent="true"
-                android:background="@color/colorPrimary">
-
-                <com.tzh.android.viewtouch.MyTextView
-                    android:id="@+id/tv"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_centerInParent="true"
-                    android:background="@color/colorAccent"
-                    android:text="MyTextView" />
-
-
-            </com.tzh.android.viewtouch.MyMiddleRelativeLayout>
-
-        </com.tzh.android.viewtouch.MyMiddleRelativeLayout2>
 
 
     </com.tzh.android.viewtouch.MyRelativeLayout>
+
+<!--    <com.tzh.android.viewtouch.MyMiddleRelativeLayout2-->
+<!--        android:layout_width="600dp"-->
+<!--        android:layout_height="600dp"-->
+<!--        android:background="#ff0">-->
+
+<!--        <com.tzh.android.viewtouch.MyMiddleRelativeLayout-->
+<!--            android:layout_width="300dp"-->
+<!--            android:layout_height="300dp"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:background="@color/colorPrimary">-->
+
+<!--            <com.tzh.android.viewtouch.MyTextView-->
+<!--                android:id="@+id/tv"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="100dp"-->
+<!--                android:layout_centerInParent="true"-->
+<!--                android:background="@color/colorAccent"-->
+<!--                android:text="MyTextView" />-->
+
+
+<!--        </com.tzh.android.viewtouch.MyMiddleRelativeLayout>-->
+
+<!--    </com.tzh.android.viewtouch.MyMiddleRelativeLayout2>-->
 
 
 </LinearLayout>
